--- a/totsnyc/config/locales/en.yml
+++ b/totsnyc/config/locales/en.yml
@@ -1,18 +1,5 @@
 # Sample localization file for English. Add more files in this directory for other locales.
-# See http://github.com/svenfuchs/rails-i18n/tree/master/rails%2Flocale for starting points.
+# See https://github.com/svenfuchs/rails-i18n/tree/master/rails%2Flocale for starting points.
 
 en:
   hello: "Hello world"
-  show: "show"
-  edit: "edit"
-  destroy: "destroy"
-  delete: "delete"
-  are_you_sure: "are you sure?"
-  back: "back"
-  new: "new"
-  actions: "Actions"
-  kukas:
-      index:
-          new_kuka: "new"
-          title: "ku"
-
