--- a/rent/README
+++ b/rent/README
@@ -10,6 +10,15 @@ renter uses phone to call RS
 Check that the building at given address already exists in RS
 If not, create new building & ask to select [or create] Management Company
 
+===  voice
+Please hold on!
+- beep - beep
+Hi John
 
+You are calling about a 2-bedroom apartment on the upper west side for 23 hundred. The apartment is still available. We will be showing it tonight at 5:30 and 6:30 PM. Please press 1 now if you wish to sign up to see it. 
+
+You may also visit our web site, rent smile dot com to view and manage your apartment search.
+
+We also have a number of similar apartments in the area. 
 
 
